--- a/metachan-source/styles.css
+++ b/metachan-source/styles.css
@@ -23,6 +23,13 @@ body{
   font-size: 25px;
 }
 
+.header{
+  padding-left: 50px;
+  color: #ffffff;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 25px;
+}
+
 .links{
   padding-left: 10px;
   line-height:1;
