--- a/metachan-source/styles.css
+++ b/metachan-source/styles.css
@@ -9,7 +9,7 @@ body{
 }
 
 .workmark{
-  padding-top: 30px;
+  padding-top: 5px;
   color: #ffffff;
   font-family: 'Open Sans', sans-serif;
   font-size: 50px;
@@ -46,6 +46,15 @@ li{
   font-size: 15px;
 }
 
-.ircsteps{
+.content{
   padding-top: 20px;
+}
+
+footer{
+    position: absolute;
+    bottom: 0;
+}
+
+.links:hover{
+  text-decoration: overline;
 }
